[package]
name = "iml"
description = "iced markup language"
version = "0.1.0"
authors = ["Michael Tang <tangmi@uw.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ron = "0.5.1"
handlebars = "3.0"
serde_json = "1"

[dependencies.iced]
version = "0.1"
features = ["debug"]

[dependencies.serde]
version = "1"
features = ["derive"]
